infra/k8s/manifests/server/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oae-server
  namespace: oae
  annotations:
    # Get this from ACM after requesting a certificate for your domain
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:957905179934:certificate/CERTIFICATE_ID
spec:
  rules:
    - host: api.anyserver.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oae-server
                port:
                  number: 80
